@@ -19,7 +19,6 @@
 package org.apache.maven.artifact.repository;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import org.apache.maven.artifact.Artifact;
@@ -48,7 +47,7 @@ public interface ArtifactRepository {
     String getBasedir();
 
     default Path getBasedirPath() {
-        return Paths.get(getBasedir());
+        return Path.of(getBasedir());
     }
 
     String getProtocol();
