@@ -21,7 +21,6 @@ package org.apache.maven.cling.executor.impl;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 
 import org.apache.maven.cling.executor.ExecutorHelper;
@@ -115,7 +114,7 @@ public class ToolboxToolTest {
                 MavenExecutorTestSupport.EMBEDDED_MAVEN_EXECUTOR,
                 MavenExecutorTestSupport.FORKED_MAVEN_EXECUTOR);
         String localRepository = new ToolboxTool(helper).localRepository(helper.executorRequest());
-        Path local = Paths.get(localRepository);
+        Path local = Path.of(localRepository);
         assertTrue(Files.isDirectory(local));
     }
 
@@ -131,7 +130,7 @@ public class ToolboxToolTest {
                 MavenExecutorTestSupport.EMBEDDED_MAVEN_EXECUTOR,
                 MavenExecutorTestSupport.FORKED_MAVEN_EXECUTOR);
         String localRepository = new ToolboxTool(helper).localRepository(helper.executorRequest());
-        Path local = Paths.get(localRepository);
+        Path local = Path.of(localRepository);
         assertTrue(Files.isDirectory(local));
     }
 
