@@ -24,7 +24,6 @@ import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.PathMatcher;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.Collections;
@@ -387,7 +386,7 @@ public class DefaultProfileActivationContext implements ProfileActivationContext
             fixed = pattern;
             glob = "";
         }
-        Path fixedPath = Paths.get(fixed);
+        Path fixedPath = Path.of(fixed);
         return doExists(fixedPath, glob);
     }
 
